test/quantumIfClassicalUpdate3.slq
def main(){
	x:=false:ğ”¹;
	n:=0;
	m:=0;
	if x{
		n+=1:!â„¤;
		m=1:!â„¤;
	}
	n+=1; /// error
	m+=1; /// error
	return (n, m); /// error
}
